Fixing darkmode background contrast color

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   /* Background colors */
   --seq-color-background-primary: rgba(0, 0, 0, 1);
   --seq-color-background-secondary: rgba(255, 255, 255, 0.1);
-  --seq-color-background-contrast: rgba(255, 255, 255, 0.5);
+  --seq-color-background-contrast: rgba(0, 0, 0, 0.5);
   --seq-color-background-muted: rgba(255, 255, 255, 0.05);
   --seq-color-background-control: rgba(255, 255, 255, 0.25);
   --seq-color-background-inverse: rgba(255, 255, 255, 1);
